--- a/client/index.html
+++ b/client/index.html
@@ -77,14 +77,14 @@
   <script src="app/home/home.module.js"></script>
   <script src="app/about/about.controller.js"></script>
   <script src="app/admin/admin.controller.js"></script>
-  <script src="app/adminReview/registerService.service.js"></script>
-  <script src="app/adminReview/review.controller.js"></script>
-  <script src="app/adminReview/reviews.directive.js"></script>
   <script src="app/adminAppointments/appService.service.js"></script>
   <script src="app/adminAppointments/appoinmentHistory.controller.js"></script>
   <script src="app/adminAppointments/editCtrl.controller.js"></script>
   <script src="app/adminAppointments/reviewCtrl.controller.js"></script>
   <script src="app/adminAppointments/reviewUploadService.service.js"></script>
+  <script src="app/adminReview/registerService.service.js"></script>
+  <script src="app/adminReview/review.controller.js"></script>
+  <script src="app/adminReview/reviews.directive.js"></script>
   <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/appointment/appointmentService.service.js"></script>
   <script src="app/home/home.controller.js"></script>
@@ -96,8 +96,10 @@
   <script src="app/msgs/msgCtrl.controller.js"></script>
   <script src="app/msgs/msgDelete.service.js"></script>
   <script src="app/msgs/msgService.service.js"></script>
+  <script src="app/previousAppointments/data.factory.js"></script>
   <script src="app/previousAppointments/previous.controller.js"></script>
   <script src="app/previousAppointments/previousService.service.js"></script>
+  <script src="app/previousAppointments/review.controller.js"></script>
   <script src="app/register/register.controller.js"></script>
   <script src="app/register/registrationService.service.js"></script>
   <script src="app/reply/addReplyService.service.js"></script>
