--- a/client/index.html
+++ b/client/index.html
@@ -65,6 +65,7 @@
   <script src="app/adminAppointments/ReviewCtrl.controller.js"></script>
   <script src="app/adminAppointments/appService.service.js"></script>
   <script src="app/adminAppointments/appoinmentHistory.controller.js"></script>
+  <script src="app/adminAppointments/deleteCtrl.controller.js"></script>
   <script src="app/adminAppointments/editCtrl.controller.js"></script>
   <script src="app/adminAppointments/reviewFactory.factory.js"></script>
   <script src="app/adminReview/registerService.service.js"></script>
@@ -73,18 +74,15 @@
   <script src="app/appointment/appoint.directive.js"></script>
   <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/appointment/appointmentService.service.js"></script>
-  <script src="app/msgs/msgCtrl.controller.js"></script>
-  <script src="app/msgs/msgDelete.service.js"></script>
-  <script src="app/msgs/msgService.service.js"></script>
   <script src="app/home/home.controller.js"></script>
   <script src="app/home/home.route.js"></script>
   <script src="app/login/authInterceptor.factory.js"></script>
   <script src="app/login/getLogin.controller.js"></script>
   <script src="app/login/tokenFactory.factory.js"></script>
   <script src="app/login/userService.service.js"></script>
-  <script src="app/register/reg.directive.js"></script>
-  <script src="app/register/register.controller.js"></script>
-  <script src="app/register/registrationService.service.js"></script>
+  <script src="app/msgs/msgCtrl.controller.js"></script>
+  <script src="app/msgs/msgDelete.service.js"></script>
+  <script src="app/msgs/msgService.service.js"></script>
   <script src="app/previousAppointments/AppEditCtrl.controller.js"></script>
   <script src="app/previousAppointments/DeleteAppCtrl.controller.js"></script>
   <script src="app/previousAppointments/changeAppointmentService.service.js"></script>
@@ -92,6 +90,9 @@
   <script src="app/previousAppointments/previous.controller.js"></script>
   <script src="app/previousAppointments/previousService.service.js"></script>
   <script src="app/previousAppointments/review.controller.js"></script>
+  <script src="app/register/reg.directive.js"></script>
+  <script src="app/register/register.controller.js"></script>
+  <script src="app/register/registrationService.service.js"></script>
   <script src="app/reply/addReplyService.service.js"></script>
   <script src="app/reply/reply.controller.js"></script>
   <script src="app/reply/replyService.service.js"></script>
