--- a/client/index.html
+++ b/client/index.html
@@ -62,30 +62,30 @@
   <script src="app/home/home.module.js"></script>
   <script src="app/about/about.controller.js"></script>
   <script src="app/admin/admin.controller.js"></script>
-  <script src="app/adminReview/registerService.service.js"></script>
-  <script src="app/adminReview/review.controller.js"></script>
-  <script src="app/adminReview/reviews.directive.js"></script>
   <script src="app/adminAppointments/ReviewCtrl.controller.js"></script>
   <script src="app/adminAppointments/appService.service.js"></script>
   <script src="app/adminAppointments/appoinmentHistory.controller.js"></script>
   <script src="app/adminAppointments/deleteCtrl.controller.js"></script>
   <script src="app/adminAppointments/editCtrl.controller.js"></script>
   <script src="app/adminAppointments/reviewFactory.factory.js"></script>
+  <script src="app/adminReview/registerService.service.js"></script>
+  <script src="app/adminReview/review.controller.js"></script>
+  <script src="app/adminReview/reviews.directive.js"></script>
   <script src="app/appointment/appoint.directive.js"></script>
   <script src="app/appointment/appointment.controller.js"></script>
   <script src="app/appointment/appointmentService.service.js"></script>
-  <script src="app/home/home.controller.js"></script>
-  <script src="app/home/home.route.js"></script>
+  <script src="app/doc/docCtrl.controller.js"></script>
+  <script src="app/doc/docService.service.js"></script>
+  <script src="app/doc/introCtrl.controller.js"></script>
   <script src="app/login/authInterceptor.factory.js"></script>
   <script src="app/login/getLogin.controller.js"></script>
   <script src="app/login/tokenFactory.factory.js"></script>
   <script src="app/login/userService.service.js"></script>
+  <script src="app/home/home.controller.js"></script>
+  <script src="app/home/home.route.js"></script>
   <script src="app/msgs/msgCtrl.controller.js"></script>
   <script src="app/msgs/msgDelete.service.js"></script>
   <script src="app/msgs/msgService.service.js"></script>
-  <script src="app/register/reg.directive.js"></script>
-  <script src="app/register/register.controller.js"></script>
-  <script src="app/register/registrationService.service.js"></script>
   <script src="app/previousAppointments/AppEditCtrl.controller.js"></script>
   <script src="app/previousAppointments/DeleteAppCtrl.controller.js"></script>
   <script src="app/previousAppointments/changeAppointmentService.service.js"></script>
@@ -93,6 +93,12 @@
   <script src="app/previousAppointments/previous.controller.js"></script>
   <script src="app/previousAppointments/previousService.service.js"></script>
   <script src="app/previousAppointments/review.controller.js"></script>
+  <script src="app/register/reg.directive.js"></script>
+  <script src="app/register/register.controller.js"></script>
+  <script src="app/register/registrationService.service.js"></script>
+  <script src="app/reply/addReplyService.service.js"></script>
+  <script src="app/reply/reply.controller.js"></script>
+  <script src="app/reply/replyService.service.js"></script>
   <script src="app/update/update.controller.js"></script>
   <script src="app/update/updateInfo.service.js"></script>
   <script src="app/update/updateService.service.js"></script>
@@ -103,9 +109,6 @@
   <script src="app/welcome/discussionStartService.service.js"></script>
   <script src="app/welcome/emailService.service.js"></script>
   <script src="app/welcome/welcome.controller.js"></script>
-  <script src="app/reply/addReplyService.service.js"></script>
-  <script src="app/reply/reply.controller.js"></script>
-  <script src="app/reply/replyService.service.js"></script>
   <!-- endinject -->
   <!-- endbuild -->
   
